# data-catalog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: make_sample_data.py
src/datacat/: __init__.py  catalog.py  cli.py  profiler.py  render.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_profiler.py  test_sample_data.py
