[project]
name = "data-catalog"
version = "0.1.0"
description = "Dataset discovery and cataloging CLI: profile a directory of mixed data files and build a searchable SQLite catalog."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lalithesh Narayanan" }]
dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
]

[project.scripts]
datacat = "datacat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
